--- a/module1_task1/Makefile
+++ b/module1_task1/Makefile
@@ -7,7 +7,7 @@ clean :
 post :
 	@hugo new posts/$(POST_NAME).md
 	@echo "---\n\
-	title="$(POST_TITLE)"\n\
-	date=$(date +"%Y-%m-%dT%H:%M:%S%z")\n\
-	draft= true\n\
+	title: \"$(POST_TITLE)\"\n\
+	date: $$(date +'%Y-%m-%dT%H:%M:%S%z')\n\
+	draft: true\n\
 	---" > content/posts/$(POST_NAME).md
