cambios en main_test.go

--- a/module2_task2/Makefile
+++ b/module2_task2/Makefile
@@ -21,4 +21,4 @@ help: ## Show this help usage
 	@fgrep -h "##" $(MAKEFILE_LIST) | fgrep -v fgrep | sed -e 's/\\$$//' | sed -e 's/##//'
 
 unit-tests: ## Execute unittests
-	go test -v -short -coverprofile=coverage-units.out
+	@go test -v -short -coverprofile=coverage-units.out
