--- a/.github/workflows/github-workflow.yml
+++ b/.github/workflows/github-workflow.yml
@@ -11,5 +11,5 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - run: git clone https://github.com/WololoRC/holbertonschool-validation
-      - run: cd module3_task0
+      - run: cd holbertonschool-validation/module3_task0
       - run: make help
