--- a/.github/workflows/module3_task0.yml
+++ b/.github/workflows/module3_task0.yml
@@ -12,6 +12,7 @@ jobs:
     runs-on: ubuntu-22.04
     defaults:
       run:
+        shell: bash
         working-directory: module3_task0
 
     steps:
