--- a/.github/workflows/module3_task0.yml
+++ b/.github/workflows/module3_task0.yml
@@ -6,14 +6,13 @@ on:
     - main
   schedule:
     - cron: '30 5,17 * * *'
-    
-jobs:
-  we-are-on-board:
-    runs-on: ubuntu-22.04
-    defaults:
+defaults:
       run:
         shell: bash
-        working-directory: module3_task0
-
+        working-directory: module3_task0    
+jobs:
+  we-are-on-board:
+    runs-on: ubuntu-22.04   
     steps:
+      - uses: actions/checkout@v3
       - run: make help
