--- a/module3_task1/Makefile
+++ b/module3_task1/Makefile
@@ -3,8 +3,8 @@ lint: ##Checks if code have no possible errors
 #	@golangci-lint run main.go
 
 build: lint check##Compile the source code of the application to a binary named awesome-api, The first build may takes some time.
-	@hugo
-	@go build -o awesome-api/awesome-api main.go
+	@sudo hugo
+	@sudo go build -o awesome-api/awesome-api main.go
 
 run: ##Run the application in background by executing the binary awesome-api, and write logs into a file named awesome-api.log.
 	@./awesome-api/awesome-api >./awesome-api.log 2>&1 &
@@ -12,7 +12,7 @@ run: ##Run the application in background by executing the binary awesome-api, an
 stop: ##Stop the application.
 	@pkill awesome-api
 
-clean: ##Stop the application. Delete the binary awesome-api and the log file awesome-api.log 
+clean: ##Stop the application. Delete the binary awesome-api and the log file awesome-api.log
 	@rm -f awesome-api/awesome-api awesome-api.log
 	@rm -f coverage_integrations.out coverage-units.out
 	@rm -rf dist/
@@ -23,7 +23,7 @@ unit-tests: ## Execute unittests
 	@go test -v -short -coverprofile=coverage-units.out
 
 integration-tests: ## Execute integration tests
-	@go test -v -coverprofile=coverage-integrations.out 
+	@go test -v -coverprofile=coverage-integrations.out
 
 post:## Create the '.md' files inside 'content/posts' with the attibutes neded. Atts: $POST_NAME, $POST_TITLE
 	@hugo new posts/$(POST_NAME).md
@@ -33,7 +33,7 @@ post:## Create the '.md' files inside 'content/posts' with the attibutes neded. 
 	draft: true\n\
 	---" > content/posts/$(POST_NAME).md
 
-check: ## Check something, we don't know what. 
+check: ## Check something, we don't know what.
 	@echo 'hola'''
 #	@markdownlint content/posts/*.md
 #	@markdown-link-check content/posts/*.md
