--- a/.github/workflows/module3_task2.yml
+++ b/.github/workflows/module3_task2.yml
@@ -19,4 +19,4 @@ jobs:
       - run: make build
         id : build-success
       - if: steps.build-success.outputs.success
-      - run: make package
+        run: make package
