--- a/.github/workflows/module3_task2.yml
+++ b/.github/workflows/module3_task2.yml
@@ -17,6 +17,5 @@ jobs:
       - uses: actions/checkout@v3
       - run: ./setup.sh
       - run: make build
-        id : build-success
-      - if: steps.build-success.outputs.success
+      - if: success()
         run: make package
