--- a/module3_task2/Makefile
+++ b/module3_task2/Makefile
@@ -3,7 +3,7 @@ lint: ##Checks if code have no possible errors
 #	@golangci-lint run main.go
 
 build: lint check##Compile the source code of the application to a binary named awesome-api, The first build may takes some time.
-	@echo make-unit-tests
+	@echo make unit-tests
 	@sudo hugo
 	@sudo go build -o awesome-api/awesome-api main.go
 
