--- a/module3_task2/Makefile
+++ b/module3_task2/Makefile
@@ -3,6 +3,7 @@ lint: ##Checks if code have no possible errors
 #	@golangci-lint run main.go
 
 build: lint check##Compile the source code of the application to a binary named awesome-api, The first build may takes some time.
+	@echo make validate
 	@echo make integration-tests
 	@echo make unit-tests
 	@sudo hugo
